objects/BMCServiceDesk__LinkUnlink_History__c.object
<CustomObject>
    <description>Tracks the old and new values of fields in the Base Element object that are selected for auditing. This object is also used to track the linking or unlinking of clients to a CMDB Instance.</description>
    <fields>
        <fullName>BMCServiceDesk__Audit_newValue__c</fullName>
        <description>Stores the updated value of a field that is selected for auditing.</description>
        <label>Field New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Audit_oldValue__c</fullName>
        <description>Stores the old value of a field that is selected for auditing.</description>
        <label>Field Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Field_Label__c</fullName>
        <description>Stores the label of a field that is selected for auditing.</description>
        <label>Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NewClient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Value</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CI_Client_Assignment_Audits1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OldClient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old Value</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CI_Client_Assignment_Audits2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ParentId__c</fullName>
        <label>Parent</label>
        <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
        <relationshipLabel>CMDB_Auditing</relationshipLabel>
        <relationshipName>CI_Client_Assignment_Audits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>CMDB Auditing</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__Field__c</columns>
        <columns>BMCServiceDesk__NewClient__c</columns>
        <columns>BMCServiceDesk__OldClient__c</columns>
        <columns>BMCServiceDesk__ParentId__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Link-Unlink History {00000000}</displayFormat>
        <label>Link-Unlink History #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CMDB Auditing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>